  macro expansion.
- Try to remove the second parameter from the pp_iterator<>::force_include
  function.
- Fix the trigraph backslash problem in the re2c (C/C++ and IDL) scanners, if
  there is the end of the (internal) buffer just in between a '??/' and a '\n'.

-------------------------------------------------------------------------------

CHANGELOG

Boost V1.75:
  - Introduced C++20 tokens, including the spaceship operator
  - Fixed #94: Tricky line number tracking logic for __LINE__ and __FILE__

Boost V1.74:
  - Fixed TRAC #10733: Hooks not called for expanding specific predefined macros
  - Fixed #58: C++11 long long literals must use consistent case
  - Repaired two samples and added a new one for macro naming enforcement
  - Implemented C++20 changes for variadic macros, including __VA_OPT__()
  - Added C++17 feature __has_include()
  - Deprecate C++98 and C++03. Support will end with 1.77.

Boost V1.73:
  - Fixed TRAC #7822: waveidl sample does not use the IDL lexer
  - Fixed TRAC #9874: Turning off 'include_next' support breaks include
  - Fixed a typedef shadowing a class (MSVC warning 4458) - Conrad Poelman
  - Updated waveidl to match recent changes in the RE2C lexer
  - Samples now build cleanly
  - Ensured samples and wave driver are covered by continuous integration

Boost V1.55:
 - Fixed #8848: Wave driver improperly processes 0xFFFFui64 token
 - Fixed #9098: Wave driver option --c++0x invalid

Boost V1.54:
 - Fixed #8478: Make Boost.wave compatible with Clang's -Wimplicit-fallthrough
   diagnostic.

Boost V1.53:
 - Fixed a problem with context<>::add_macro_definition which sometimes
   appended a superfluous T_EOF to the macro replacement list.

Boost V1.52.0:
 - Added util::create_directories() wrapper to account for new behavior of
   boost::filesystem::create_directories().
 - Fixed an obscure problem when preprocessing directives wouldn't be recognized
   if the previous line contained nothing but an empty macro invocation