@@ -34,19 +34,19 @@ environment:
 #    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
 #      ADDPATH: C:\cygwin\bin;
 #      TOOLSET: gcc
-#      CXXSTD: 03,11,14,1z
+#      CXXSTD: 11,14,1z
 #    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
 #      ADDPATH: C:\cygwin64\bin;
 #      TOOLSET: gcc
-#      CXXSTD: 03,11,14,1z
+#      CXXSTD: 11,14,1z
 #    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
 #      ADDPATH: C:\mingw\bin;
 #      TOOLSET: gcc
-#      CXXSTD: 03,11,14,1z
+#      CXXSTD: 11,14,1z
 #    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
 #      ADDPATH: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin;
 #      TOOLSET: gcc
-#      CXXSTD: 03,11,14,1z
+#      CXXSTD: 11,14,1z
 
 install:
   - set BOOST_BRANCH=develop
