@@ -18,6 +18,9 @@ TODO (known issues):
 
 CHANGELOG
 
+Boost V1.78:
+  - Removed support for C++03 (as a compiler), previously deprecated in 1.74
+	
 Boost V1.75:
   - Introduced C++20 tokens, including the spaceship operator
   - Fixed #94: Tricky line number tracking logic for __LINE__ and __FILE__
